feat: show icon in search result indicating what type of content it matched

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,7 +11,12 @@
             "button": "Search",
             "instructions": "<kbd>Esc</kbd> to close <kbd>Arrow up/down</kbd> to navigate <kbd>Enter</kbd> to select",
             "title": "Search",
-            "placeholder": "Type to begin searching"
+            "placeholder": "Type to begin searching",
+            "result": {
+                "component": "Component documentation",
+                "api": "API documentation",
+                "article": "Article"
+            }
         }
     }
 }
